--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,8 @@ body {
     background-image: url("../src/images/OnWj0is.png");
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
+    background-color: #0d868f;
 }
 
 .container_article {
