--- a/src/components/results-items/items.module.css
+++ b/src/components/results-items/items.module.css
@@ -1,9 +1,7 @@
-* {
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .result-container {
-    margin: 5px;
+    margin: 8px;
     background-color: #fff;
     min-height: 200px;
     cursor: pointer;
@@ -18,11 +16,12 @@
 
 
 .data-container {
-    font-family: "Roboto", sans-serif;
+    height: 12rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
-    padding: 5px;
+    padding: 9px;
 }
 
 .div-container_img {
@@ -34,16 +33,17 @@
 }
 
 .div-container_title {
-    margin: 0px 0px 12px;
-    color: #333;
+    margin: 0;
     font-size: 16px;
-    font-weight: 400;
     line-height: 1.4;
     word-break: break-word;
+    font-weight: 600;
 }
 
 .div-container_price {
+    margin: 0;
+    align-items: end;
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.25;
 }
