presentacion y diseño terminado

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: italic;
+    background-color: rgba(169, 169, 169, 0.301);
 
 }
 
