--- a/src/components/results-items/slider.css
+++ b/src/components/results-items/slider.css
@@ -2,7 +2,6 @@
 .product-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     justify-content: center;
 }
 
@@ -10,11 +9,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    background-color: white;
 }
 
 .carousel {
     max-width: 660px;
-    min-width: 370px;
+    min-width: 330px;
 }
 
 .slider-button {
@@ -37,6 +37,8 @@
     display: flex;
     flex-direction: column;
     gap: 3px;
+    border-radius: 10px;
+
 }
 
 .product-price {
@@ -45,11 +47,17 @@
     margin-top: 12px;
 }
 
+.div-button-container {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
 .button-comprar {
     background-color: #3483fa;
     border-color: transparent;
     color: #fff;
-    width: 100%;
     height: 48px;
     padding: 0 24px;
     font-size: 16px;
@@ -58,6 +66,8 @@
     border-radius: 6px;
     line-height: 48px;
     margin-top: 12px;
+    width: 100%;
+    max-width: 720px;
 }
 
 /* para todos los sections */
