--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -15,7 +15,7 @@
 
 /* Diseño de https://github.com/FacundoEG (gracias)*/
 .cpu-image {
-    background-image: url("/src/images/Search\ engines-amico.svg");
+    background-image: url("/src/images/desktop-fondo.svg");
     width: 100%;
     height: 350px;
     background-repeat: no-repeat;
