--- a/src/components/search-form/form.module.css
+++ b/src/components/search-form/form.module.css
@@ -20,7 +20,7 @@
 @media (min-width:575px) {
     .form-container_div {
         width: 400px;
-        height: 40px;
+        height: 45px;
     }
 }
 
@@ -29,7 +29,6 @@
     align-items: center;
     background-image: url(https://cdn-icons-png.flaticon.com/512/482/482631.png);
     cursor: pointer;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
     border: 1px rgba(0, 0, 0, 0.2);
     background-color: #fff;
 }
@@ -44,8 +43,9 @@
 .form-container_nav-logo {
     background-image: url(https://http2.mlstatic.com/frontend-assets/ui-navigation/5.18.9/mercadolibre/logo__large_plus.png);
     height: 34px;
-    min-width: 50px;
+    min-width: 55px;
     margin-right: 15px;
+    background-repeat: no-repeat;
 }
 
 @media (min-width:575px) {
@@ -61,7 +61,6 @@
     font-size: 15px;
     width: 100%;
     border: none;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
     left: 10px;
 }
 
