--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,79 +1,79 @@
 .home-container {
-    background-color: rgb(23, 40, 73);
-    height: 100vh;
+    background-color: black;
     font-family: "Bungee Spice", sans-serif;
-    font-weight: 400;
-    font-style: italic;
+    min-height: 100vh;
 }
 
-.container-presentation {
+
+.title {
     text-align: center;
 }
 
-
-
-
-/* Diseño de https://github.com/FacundoEG (gracias)*/
-.cpu-image {
-    background-image: url("/src/images/desktop-fondo.svg");
-    width: 100%;
-    height: 350px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin: 0 auto;
-    animation: myAnim 5s ease 0s infinite alternate-reverse forwards;
-}
-
-@media (min-width: 500px) {
-    .cpu-image {
-        width: 200px;
-        height: 200px;
-        width: 500px;
-        height: 370px;
+@media (min-width:574px) {
+    .title {
+        text-align: start;
     }
 }
 
-@keyframes myAnim {
-    0% {
-        transform: translate(0);
+.content {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+@media (min-width:574px) {
+    .content {
+        display: flex;
+        flex-direction: column;
+        height: 500px;
     }
 
-    20% {
-        transform: translate(-2px, 2px);
-    }
-
-    40% {
-        transform: translate(-2px, -2px);
-    }
-
-    60% {
-        transform: translate(2px, 2px);
-    }
-
-    80% {
-        transform: translate(2px, -2px);
-    }
-
-    100% {
-        transform: translate(0);
-    }
 }
 
 .container-tools {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 60px;
-    min-width: 200px;
-    padding: 10px;
+    gap: 12px;
+    align-items: center;
+    /* padding: 10px; */
+    align-self: flex-end;
+    width: 100%;
 }
+
+.tools {
+    display: flex;
+    flex-direction: column;
+}
+
+
+@media (min-width:480px) {
+
+    .tools {
+        flex-direction: row;
+        justify-content: space-around;
+        width: 400px;
+    }
+}
+
 
 .img-react,
 .img-typescript {
-    height: 120px;
+    height: 90px;
     text-align: center;
 
 }
+
+@media (min-width:574px) {
+
+    .img-react,
+    .img-typescript {
+        height: 120px;
+        text-align: center;
+
+    }
+}
+
 
 .title {
     margin: 0;
@@ -86,6 +86,45 @@
     font-style: normal;
 }
 
-.h2 {
+/* .h2 {
     padding: 0;
+} */
+.contact,
+.links {
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+.links {
+    align-self: flex-start;
+    width: 100%;
+}
+
+@media (min-width:574px) {
+    .links {
+        align-self: normal;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+.contact {
+    margin: 0;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.contact>img {
+    width: 50px;
+}
+
+@media (min-width:574px) {
+    .contact>img {
+        width: 80px;
+    }
+
 }
